--- a/css/mobile.css
+++ b/css/mobile.css
@@ -27,7 +27,7 @@ html {
 /***************** HEADER ************************/
 header {
     width: 100%;
-    height: 100px;
+    height: 150px;
     background: linear-gradient(
 207.8deg, #201E1C 16.69%, #1e5f8a 100%);
     margin: 0 auto;
@@ -40,30 +40,29 @@ header {
 
 
 header .title-header {
-    font-size: 2.5rem;
-    color: #a5b6c0;
-    padding-top: 20px;
-    margin-bottom: 8px;
+    font-size: 2rem;
+    color: #e0e6e9;
+    padding-top: 30px;
+    margin-bottom: 20px;
 
 }
 
 
 header .nav-bar {
     font-size: 1.2rem;
-    height: 20px;
+    height: 30px;
     width: 100%;
 
 }
 header li {
     display: inline-block;
-    font-size: 1.2rem;
     font-weight: bold;
-    margin: 0 10px;
+    margin: 0 5px;
     box-shadow: 0px 4px 8px rgb(89 73 30 / 16%);  
 }
 
 header a {
     text-decoration: none;
-    color: black;
+    color: rgb(124, 158, 168);
     
 }
