--- a/css/mobile.css
+++ b/css/mobile.css
@@ -66,3 +66,62 @@ header a {
     color: rgb(124, 158, 168);
     
 }
+
+
+/***************** BODY************************/
+/******** PROFILE PIC**********/
+main {
+    width: 100%;
+    height: auto;
+    background-color: rgb(124, 158, 168);
+}
+
+.main-exchange-container{
+width: 100%;
+height: auto;
+padding-top: 40px;
+padding-bottom: 150px;
+text-align: center;
+}
+
+.main-exchange-container .profile-pic {
+    width: 280px;
+    height: 320px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgb(89 73 30 / 86%); 
+    background-image: url('../pics/me4.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;   
+
+
+}
+
+/******** DESCRIPTION PROFILE**********/
+
+.main-exchange-container--description{
+    width: 90%;  
+    min-width: 288px;
+    max-width: 550px;
+    margin: 0 auto;
+    text-align: justify;
+}
+.main-exchange-container--description h1 {
+    font-size: 2rem;
+    font-weight: bold;
+    color: #e0e6e9;
+    margin-bottom: 30px;
+    text-align: center;
+
+}
+
+.main-exchange-container--description p {
+    margin-top: 25px;
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 2rem;
+    color: black;
+    
+}
