--- a/css/mobile.css
+++ b/css/mobile.css
@@ -27,9 +27,9 @@ html {
 /***************** HEADER ************************/
 header {
     width: 100%;
-    height: 150px;
+    height: 180px;
     background: linear-gradient(
-207.8deg, #201E1C 16.69%, #1e5f8a 100%);
+207.8deg, #201E1C 16.69%, #3e7091 100%);
     margin: 0 auto;
     text-align: center;
     box-shadow: 0px 4px 8px rgb(89 73 30 / 16%);
@@ -40,8 +40,8 @@ header {
 
 
 header .title-header {
-    font-size: 2rem;
-    color: #e0e6e9;
+    font-size: 2.5rem;
+    color: rgb(124, 158, 168);
     padding-top: 30px;
     margin-bottom: 20px;
 
@@ -49,9 +49,11 @@ header .title-header {
 
 
 header .nav-bar {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     height: 30px;
     width: 100%;
+
+  
 
 }
 header li {
@@ -63,18 +65,14 @@ header li {
 
 header a {
     text-decoration: none;
-    color: rgb(124, 158, 168);
+    color: rgb(114, 193, 218);
     
 }
 
 
 /***************** BODY************************/
 /******** PROFILE PIC**********/
-main {
-    width: 100%;
-    height: auto;
-    background-color: rgb(124, 158, 168);
-}
+
 
 .main-exchange-container{
 width: 100%;
@@ -82,6 +80,7 @@ height: auto;
 padding-top: 40px;
 padding-bottom: 150px;
 text-align: center;
+background-color: rgb(188, 210, 218);
 }
 
 .main-exchange-container .profile-pic {
@@ -111,7 +110,7 @@ text-align: center;
 .main-exchange-container--description h1 {
     font-size: 2rem;
     font-weight: bold;
-    color: #e0e6e9;
+    color: #3e7091;
     margin-bottom: 30px;
     text-align: center;
 
