--- a/css/mobile.css
+++ b/css/mobile.css
@@ -8,119 +8,220 @@
 
 html {
     font-size: 62.5%;
-    font-family: 'DM Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 :root {
-    --bitcoin-orange: #F7931A;
-    --soft-orange: #ffe9d5;
-    --secondary-blue: #1A9AF7;
-    --soft-blue: #E7F5FF;
-    --warm-black: #201E1C;
-    --warm-black1: #282623;
-    --black: #282623;
-    --gray: #BABABA;
-    --off-white: #faf8f7;
+
     --just-white: #fff;
+    --black: #111;
+    --overlay:#03a9f4;
 }
+/* ***************BACKGROUND****************** */
+video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.8;
+}
+  
+.overlayer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--overlay);
+    mix-blend-mode:overlay;
+  }
 
 /***************** HEADER ************************/
-header {
-    width: 100%;
-    height: 180px;
-    background: linear-gradient(
-207.8deg, #201E1C 16.69%, #3e7091 100%);
-    margin: 0 auto;
-    text-align: center;
-    box-shadow: 0px 4px 8px rgb(89 73 30 / 16%);
-    border: none;
-    min-width: 320px;   
 
+header
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 40px 100px;
+  z-index: 100;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header .logo
+{
+  color: var(--just-white);
+  text-transform: uppercase;
+  cursor: pointer;
+  font-size: 3rem;
+  letter-spacing: 10px;
+}
+.toggle {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  background: url(https://i.ibb.co/HrfVRcx/menu.png);
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: center;
+  cursor: pointer;
+}
+.toggle.active {
+  background: url(https://i.ibb.co/rt3HybH/close.png);
+  background-repeat: no-repeat;
+  background-size: 25px;
+  background-position: center;
+  cursor: pointer;
 }
 
-
-header .title-header {
-    font-size: 2.5rem;
-    color: rgb(124, 158, 168);
-    padding-top: 30px;
-    margin-bottom: 20px;
-
+.showcase {
+  position: absolute;
+  right: 0;
+  width: 100%;
+  min-height: 100vh;
+  padding: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: var(--black);
+  transition: 0.5s;
+  z-index: 2;
 }
 
-
-header .nav-bar {
-    font-size: 1.5rem;
-    height: 30px;
-    width: 100%;
-
-  
-
+.showcase.active
+{
+  right: 300px;
 }
-header li {
-    display: inline-block;
-    font-weight: bold;
-    margin: 0 5px;
-    box-shadow: 0px 4px 8px rgb(89 73 30 / 16%);  
-}
-
-header a {
-    text-decoration: none;
-    color: rgb(114, 193, 218);
-    
-}
-
-
 /***************** BODY************************/
-/******** PROFILE PIC**********/
-
-
-.main-exchange-container{
-width: 100%;
-height: auto;
-padding-top: 40px;
-padding-bottom: 150px;
-text-align: center;
-background-color: rgb(188, 210, 218);
+.text
+{
+  position: relative;
+  z-index: 10;
+  
 }
 
-.main-exchange-container .profile-pic {
-    width: 280px;
-    height: 320px;
-    margin: 0 auto;
-    margin-bottom: 50px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 8px rgb(89 73 30 / 86%); 
-    background-image: url('../pics/me4.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;   
-
-
+.text h2
+{
+  font-size: 5rem;
+  font-weight: 800;
+  color: var(--just-white);
+  line-height: 1em;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+.text h3
+{
+  font-size: 3.5rem;
+  font-weight: 700;
+  color: var(--just-white);
+  line-height: 1em;
+  text-transform: uppercase;
+}
+.text p
+{
+  font-size: 1.5rem;
+  color: var(--just-white);
+  margin: 20px 0;
+  font-weight: 400;
+  max-width: 700px;
+}
+.text a
+{
+  display: inline-block;
+  font-size: 1rem;
+  background: var(--just-white);
+  padding: 10px 30px;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 500;
+  margin-top: 10px;
+  color: var(--black);
+  letter-spacing: 2px;
+  transition: 0.2s;
+}
+.text a:hover
+{
+  letter-spacing: 20px;
 }
 
-/******** DESCRIPTION PROFILE**********/
+/***************** Socials************************/
 
-.main-exchange-container--description{
-    width: 90%;  
-    min-width: 288px;
-    max-width: 550px;
-    margin: 0 auto;
-    text-align: justify;
+.social {
+  position: absolute;
+  z-index: 10;
+  bottom: 100px;
+  left: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.main-exchange-container--description h1 {
+.social li {
+  list-style: none;
+}
+.social li a {
+  display: inline-block;
+  margin-right: 20px;
+  filter: invert(1);
+  transform: scale(0.5);
+  transition: 0.5s;
+}
+.social li a:hover {
+  transform: scale(0.5) translateY(-15px);
+}
+
+/***************** Socials************************/
+.menu
+{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 300px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.menu ul
+{
+  position: relative;
+}
+.menu ul li
+{
+  list-style: none;
+}
+.menu ul li a
+{
+  text-decoration: none;
+  font-size: 24px;
+  color: var(--black)
+}
+.menu ul li a:hover
+{
+  color: var(--overlay); 
+}
+
+@media (max-width: 991px)
+{
+  .showcase,
+  .showcase header
+  {
+    padding: 40px;
+  }
+  .text h2
+  {
+    font-size: 3.5rem;
+  }
+  .text h3
+  {
     font-size: 2rem;
-    font-weight: bold;
-    color: #3e7091;
-    margin-bottom: 30px;
-    text-align: center;
-
+  }
+  header .logo
+{
+  letter-spacing: 5px;
+  font-size: 2rem;
 }
-
-.main-exchange-container--description p {
-    margin-top: 25px;
-    font-size: 1.6rem;
-    font-weight: 500;
-    line-height: 2rem;
-    color: black;
-    
 }
